--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -116,20 +116,20 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 359,\n",
-              "  'time': '2023-11-17T21:15:00.000000000Z',\n",
-              "  'mid': {'o': '1.09052', 'h': '1.09096', 'l': '1.09048', 'c': '1.09094'}},\n",
+              "  'volume': 757,\n",
+              "  'time': '2023-11-20T19:00:00.000000000Z',\n",
+              "  'mid': {'o': '1.09454', 'h': '1.09472', 'l': '1.09408', 'c': '1.09415'}},\n",
               " {'complete': True,\n",
-              "  'volume': 295,\n",
-              "  'time': '2023-11-17T21:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.09094', 'h': '1.09116', 'l': '1.09091', 'c': '1.09096'}},\n",
-              " {'complete': True,\n",
-              "  'volume': 379,\n",
-              "  'time': '2023-11-17T21:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.09095', 'h': '1.09143', 'l': '1.09091', 'c': '1.09127'}}]"
+              "  'volume': 588,\n",
+              "  'time': '2023-11-20T19:15:00.000000000Z',\n",
+              "  'mid': {'o': '1.09416', 'h': '1.09421', 'l': '1.09389', 'c': '1.09420'}},\n",
+              " {'complete': False,\n",
+              "  'volume': 115,\n",
+              "  'time': '2023-11-20T19:30:00.000000000Z',\n",
+              "  'mid': {'o': '1.09421', 'h': '1.09434', 'l': '1.09412', 'c': '1.09418'}}]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "id": "YDvk2yOSso4J"
       },
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -259,11 +259,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'orderCreateTransaction': {'id': '1818', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1818', 'requestID': '43161251070157368', 'time': '2023-11-20T19:46:00.674394442Z', 'type': 'MARKET_ORDER', 'instrument': 'NZD_USD', 'units': '-1911', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '0.60400', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '0.60289', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1819', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1818', 'requestID': '43161251070157368', 'time': '2023-11-20T19:46:00.674394442Z', 'type': 'ORDER_CANCEL', 'orderID': '1818', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1818', '1819'], 'lastTransactionID': '1819'}\n",
+            "{'orderCreateTransaction': {'id': '1820', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1820', 'requestID': '61175649579573927', 'time': '2023-11-20T19:46:00.684312648Z', 'type': 'MARKET_ORDER', 'instrument': 'GBP_CHF', 'units': '-2066', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.10722', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.10620', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1821', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1820', 'requestID': '61175649579573927', 'time': '2023-11-20T19:46:00.684312648Z', 'type': 'ORDER_CANCEL', 'orderID': '1820', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1820', '1821'], 'lastTransactionID': '1821'}\n",
+            "{'orderCreateTransaction': {'id': '1822', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1822', 'requestID': '79190048087636138', 'time': '2023-11-20T19:46:00.762938540Z', 'type': 'MARKET_ORDER', 'instrument': 'NZD_JPY', 'units': '-2012', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '89.593', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '89.419', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1823', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1822', 'requestID': '79190048087636138', 'time': '2023-11-20T19:46:00.762938540Z', 'type': 'ORDER_CANCEL', 'orderID': '1822', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1822', '1823'], 'lastTransactionID': '1823'}\n",
+            "{'orderCreateTransaction': {'id': '1824', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1824', 'requestID': '61175649579574227', 'time': '2023-11-20T19:46:00.933962166Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_CAD', 'units': '1932', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.50090', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.50222', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1825', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1824', 'requestID': '61175649579574227', 'time': '2023-11-20T19:46:00.933962166Z', 'type': 'ORDER_CANCEL', 'orderID': '1824', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1824', '1825'], 'lastTransactionID': '1825'}\n",
+            "{'orderCreateTransaction': {'id': '1826', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1826', 'requestID': '43161251070157727', 'time': '2023-11-20T19:46:00.957706682Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_GBP', 'units': '2008', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '0.87448', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '0.87487', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1827', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1826', 'requestID': '43161251070157727', 'time': '2023-11-20T19:46:00.957706682Z', 'type': 'ORDER_CANCEL', 'orderID': '1826', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1826', '1827'], 'lastTransactionID': '1827'}\n",
+            "{'orderCreateTransaction': {'id': '1828', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1828', 'requestID': '61175649579574265', 'time': '2023-11-20T19:46:00.963610614Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_CHF', 'units': '-2042', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '0.96839', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '0.96764', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1829', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1828', 'requestID': '61175649579574265', 'time': '2023-11-20T19:46:00.963610614Z', 'type': 'ORDER_CANCEL', 'orderID': '1828', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1828', '1829'], 'lastTransactionID': '1829'}\n",
+            "{'orderCreateTransaction': {'id': '1830', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1830', 'requestID': '79190048091830897', 'time': '2023-11-20T19:46:01.110058329Z', 'type': 'MARKET_ORDER', 'instrument': 'AUD_NZD', 'units': '2034', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.08644', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.08800', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1831', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1830', 'requestID': '79190048091830897', 'time': '2023-11-20T19:46:01.110058329Z', 'type': 'ORDER_CANCEL', 'orderID': '1830', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1830', '1831'], 'lastTransactionID': '1831'}\n",
+            "{'orderCreateTransaction': {'id': '1832', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1832', 'requestID': '25146852566613297', 'time': '2023-11-20T19:46:01.149094914Z', 'type': 'MARKET_ORDER', 'instrument': 'GBP_NZD', 'units': '2047', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '2.07144', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '2.07480', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1833', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1832', 'requestID': '25146852566613297', 'time': '2023-11-20T19:46:01.149094914Z', 'type': 'ORDER_CANCEL', 'orderID': '1832', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1832', '1833'], 'lastTransactionID': '1833'}\n",
+            "{'orderCreateTransaction': {'id': '1834', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1834', 'requestID': '79190048091830942', 'time': '2023-11-20T19:46:01.151443340Z', 'type': 'MARKET_ORDER', 'instrument': 'CAD_CHF', 'units': '-1993', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '0.64500', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '0.64425', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1835', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1834', 'requestID': '79190048091830942', 'time': '2023-11-20T19:46:01.151443340Z', 'type': 'ORDER_CANCEL', 'orderID': '1834', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1834', '1835'], 'lastTransactionID': '1835'}\n",
+            "{'orderCreateTransaction': {'id': '1836', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1836', 'requestID': '25146852566613324', 'time': '2023-11-20T19:46:01.180878678Z', 'type': 'MARKET_ORDER', 'instrument': 'USD_CAD', 'units': '1996', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.37145', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.37289', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1837', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1836', 'requestID': '25146852566613324', 'time': '2023-11-20T19:46:01.180878678Z', 'type': 'ORDER_CANCEL', 'orderID': '1836', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1836', '1837'], 'lastTransactionID': '1837'}\n",
+            "{'orderCreateTransaction': {'id': '1838', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1838', 'requestID': '25146856334113610', 'time': '2023-11-20T20:01:00.552796465Z', 'type': 'MARKET_ORDER', 'instrument': 'GBP_CHF', 'units': '-2064', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.10706', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.10604', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1839', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1838', 'requestID': '25146856334113610', 'time': '2023-11-20T20:01:00.552796465Z', 'type': 'ORDER_CANCEL', 'orderID': '1838', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1838', '1839'], 'lastTransactionID': '1839'}{'orderCreateTransaction': {'id': '1840', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1840', 'requestID': '43161254846171672', 'time': '2023-11-20T20:01:00.552853601Z', 'type': 'MARKET_ORDER', 'instrument': 'GBP_USD', 'units': '-1911', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.25170', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.25068', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1841', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1840', 'requestID': '43161254846171672', 'time': '2023-11-20T20:01:00.552853601Z', 'type': 'ORDER_CANCEL', 'orderID': '1840', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1840', '1841'], 'lastTransactionID': '1841'}\n",
+            "\n",
+            "{'orderCreateTransaction': {'id': '1842', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1842', 'requestID': '43161254846171982', 'time': '2023-11-20T20:01:00.768082489Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_GBP', 'units': '2025', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '0.87440', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '0.87527', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1843', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1842', 'requestID': '43161254846171982', 'time': '2023-11-20T20:01:00.768082489Z', 'type': 'ORDER_CANCEL', 'orderID': '1842', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1842', '1843'], 'lastTransactionID': '1843'}\n",
+            "{'orderCreateTransaction': {'id': '1844', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1844', 'requestID': '25146856334113896', 'time': '2023-11-20T20:01:00.780534393Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_CAD', 'units': '-1935', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.50374', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.50137', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '1845', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '1844', 'requestID': '25146856334113896', 'time': '2023-11-20T20:01:00.780534393Z', 'type': 'ORDER_CANCEL', 'orderID': '1844', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['1844', '1845'], 'lastTransactionID': '1845'}\n"
+          ]
+        }
+      ],
       "source": [
         "# for i in range (len(list_of_str_currency)):\n",
         "#     trading_job(currency_pairs[i],list_of_str_currency[i])\n",
