--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -116,17 +116,17 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 71,\n",
-              "  'time': '2023-11-23T21:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.09063', 'h': '1.09068', 'l': '1.09054', 'c': '1.09060'}},\n",
+              "  'volume': 823,\n",
+              "  'time': '2023-11-24T21:15:00.000000000Z',\n",
+              "  'mid': {'o': '1.09448', 'h': '1.09472', 'l': '1.09390', 'c': '1.09422'}},\n",
               " {'complete': True,\n",
-              "  'volume': 63,\n",
-              "  'time': '2023-11-23T21:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.09060', 'h': '1.09069', 'l': '1.09055', 'c': '1.09066'}},\n",
-              " {'complete': False,\n",
-              "  'volume': 112,\n",
-              "  'time': '2023-11-23T22:00:00.000000000Z',\n",
-              "  'mid': {'o': '1.09056', 'h': '1.09058', 'l': '1.09024', 'c': '1.09026'}}]"
+              "  'volume': 393,\n",
+              "  'time': '2023-11-24T21:30:00.000000000Z',\n",
+              "  'mid': {'o': '1.09402', 'h': '1.09438', 'l': '1.09384', 'c': '1.09405'}},\n",
+              " {'complete': True,\n",
+              "  'volume': 145,\n",
+              "  'time': '2023-11-24T21:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.09408', 'h': '1.09413', 'l': '1.09369', 'c': '1.09399'}}]"
             ]
           },
           "execution_count": 3,
@@ -263,20 +263,7 @@
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{'orderCreateTransaction': {'id': '2080', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2080', 'requestID': '79191173003686806', 'time': '2023-11-23T22:16:00.451516137Z', 'type': 'MARKET_ORDER', 'instrument': 'AUD_NZD', 'units': '-1956', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.08584', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.08326', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '2081', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2080', 'requestID': '79191173003686806', 'time': '2023-11-23T22:16:00.451516137Z', 'type': 'ORDER_CANCEL', 'orderID': '2080', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['2080', '2081'], 'lastTransactionID': '2081'}\n",
-            "{'orderCreateTransaction': {'id': '2082', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2082', 'requestID': '61176774493235929', 'time': '2023-11-23T22:16:00.471601347Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_NZD', 'units': '-2005', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.80452', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.80164', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '2083', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2082', 'requestID': '61176774493235929', 'time': '2023-11-23T22:16:00.471601347Z', 'type': 'ORDER_CANCEL', 'orderID': '2082', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['2082', '2083'], 'lastTransactionID': '2083'}\n",
-            "{'orderCreateTransaction': {'id': '2084', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2084', 'requestID': '79191173003687124', 'time': '2023-11-23T22:16:00.874941529Z', 'type': 'MARKET_ORDER', 'instrument': 'GBP_NZD', 'units': '-1986', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '2.07505', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '2.07085', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '2085', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2084', 'requestID': '79191173003687124', 'time': '2023-11-23T22:16:00.874941529Z', 'type': 'ORDER_CANCEL', 'orderID': '2084', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['2084', '2085'], 'lastTransactionID': '2085'}\n",
-            "{'orderCreateTransaction': {'id': '2086', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2086', 'requestID': '25147981250178992', 'time': '2023-11-23T22:31:00.588093346Z', 'type': 'MARKET_ORDER', 'instrument': 'EUR_NZD', 'units': '-1966', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '1.80452', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '1.80164', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '2087', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2086', 'requestID': '25147981250178992', 'time': '2023-11-23T22:31:00.588093346Z', 'type': 'ORDER_CANCEL', 'orderID': '2086', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['2086', '2087'], 'lastTransactionID': '2087'}\n",
-            "{'orderCreateTransaction': {'id': '2088', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2088', 'requestID': '25147981250179323', 'time': '2023-11-23T22:31:00.984340384Z', 'type': 'MARKET_ORDER', 'instrument': 'GBP_NZD', 'units': '-2073', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '2.07505', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '2.07085', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '2089', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2088', 'requestID': '25147981250179323', 'time': '2023-11-23T22:31:00.984340384Z', 'type': 'ORDER_CANCEL', 'orderID': '2088', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['2088', '2089'], 'lastTransactionID': '2089'}\n",
-            "{'orderCreateTransaction': {'id': '2090', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2090', 'requestID': '79191176775055625', 'time': '2023-11-23T22:31:00.989510205Z', 'type': 'MARKET_ORDER', 'instrument': 'GBP_JPY', 'units': '-2033', 'timeInForce': 'FOK', 'positionFill': 'DEFAULT', 'takeProfitOnFill': {'price': '187.528', 'timeInForce': 'GTC'}, 'stopLossOnFill': {'price': '187.330', 'timeInForce': 'GTC', 'triggerMode': 'TOP_OF_BOOK'}, 'reason': 'CLIENT_ORDER'}, 'orderCancelTransaction': {'id': '2091', 'accountID': '101-001-27332384-001', 'userID': 27332384, 'batchID': '2090', 'requestID': '79191176775055625', 'time': '2023-11-23T22:31:00.989510205Z', 'type': 'ORDER_CANCEL', 'orderID': '2090', 'reason': 'TAKE_PROFIT_ON_FILL_LOSS'}, 'relatedTransactionIDs': ['2090', '2091'], 'lastTransactionID': '2091'}\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# for i in range (len(list_of_str_currency)):\n",
         "#     trading_job(currency_pairs[i],list_of_str_currency[i])\n",
@@ -289,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
