--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -116,17 +116,17 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 823,\n",
-              "  'time': '2023-11-24T21:15:00.000000000Z',\n",
-              "  'mid': {'o': '1.09448', 'h': '1.09472', 'l': '1.09390', 'c': '1.09422'}},\n",
+              "  'volume': 547,\n",
+              "  'time': '2023-11-27T02:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.09422', 'h': '1.09444', 'l': '1.09403', 'c': '1.09430'}},\n",
               " {'complete': True,\n",
-              "  'volume': 393,\n",
-              "  'time': '2023-11-24T21:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.09402', 'h': '1.09438', 'l': '1.09384', 'c': '1.09405'}},\n",
-              " {'complete': True,\n",
-              "  'volume': 145,\n",
-              "  'time': '2023-11-24T21:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.09408', 'h': '1.09413', 'l': '1.09369', 'c': '1.09399'}}]"
+              "  'volume': 389,\n",
+              "  'time': '2023-11-27T03:00:00.000000000Z',\n",
+              "  'mid': {'o': '1.09430', 'h': '1.09438', 'l': '1.09410', 'c': '1.09429'}},\n",
+              " {'complete': False,\n",
+              "  'volume': 121,\n",
+              "  'time': '2023-11-27T03:15:00.000000000Z',\n",
+              "  'mid': {'o': '1.09430', 'h': '1.09437', 'l': '1.09417', 'c': '1.09420'}}]"
             ]
           },
           "execution_count": 3,
@@ -263,23 +263,7 @@
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
-      "outputs": [
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[1;32m/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb Cell 8\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m (\u001b[39mlen\u001b[39m(currency_pairs)):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     scheduler\u001b[39m.\u001b[39madd_job(trading_job, \u001b[39m'\u001b[39m\u001b[39mcron\u001b[39m\u001b[39m'\u001b[39m, args \u001b[39m=\u001b[39m [currency_pairs[i],list_of_str_currency[i]], day_of_week\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mmon-fri\u001b[39m\u001b[39m'\u001b[39m, hour\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m00-23\u001b[39m\u001b[39m'\u001b[39m, minute\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m1,16,31,46\u001b[39m\u001b[39m'\u001b[39m, start_date\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m2022-01-12 12:00:00\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m scheduler\u001b[39m.\u001b[39;49mstart()\n",
-            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/apscheduler/schedulers/blocking.py:21\u001b[0m, in \u001b[0;36mBlockingScheduler.start\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_event \u001b[39m=\u001b[39m Event()\n\u001b[1;32m     20\u001b[0m \u001b[39msuper\u001b[39m(BlockingScheduler, \u001b[39mself\u001b[39m)\u001b[39m.\u001b[39mstart(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m---> 21\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_main_loop()\n",
-            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/apscheduler/schedulers/blocking.py:30\u001b[0m, in \u001b[0;36mBlockingScheduler._main_loop\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     28\u001b[0m wait_seconds \u001b[39m=\u001b[39m TIMEOUT_MAX\n\u001b[1;32m     29\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstate \u001b[39m!=\u001b[39m STATE_STOPPED:\n\u001b[0;32m---> 30\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_event\u001b[39m.\u001b[39;49mwait(wait_seconds)\n\u001b[1;32m     31\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_event\u001b[39m.\u001b[39mclear()\n\u001b[1;32m     32\u001b[0m     wait_seconds \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_process_jobs()\n",
-            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/threading.py:607\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    605\u001b[0m signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flag\n\u001b[1;32m    606\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 607\u001b[0m     signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cond\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    608\u001b[0m \u001b[39mreturn\u001b[39;00m signaled\n",
-            "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/threading.py:324\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    322\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    323\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m--> 324\u001b[0m         gotit \u001b[39m=\u001b[39m waiter\u001b[39m.\u001b[39;49macquire(\u001b[39mTrue\u001b[39;49;00m, timeout)\n\u001b[1;32m    325\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    326\u001b[0m         gotit \u001b[39m=\u001b[39m waiter\u001b[39m.\u001b[39macquire(\u001b[39mFalse\u001b[39;00m)\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# for i in range (len(list_of_str_currency)):\n",
         "#     trading_job(currency_pairs[i],list_of_str_currency[i])\n",
