--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -116,17 +116,17 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 38,\n",
-              "  'time': '2023-11-28T22:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.09953', 'h': '1.09957', 'l': '1.09953', 'c': '1.09956'}},\n",
+              "  'volume': 235,\n",
+              "  'time': '2023-12-01T21:15:00.000000000Z',\n",
+              "  'mid': {'o': '1.08804', 'h': '1.08820', 'l': '1.08786', 'c': '1.08788'}},\n",
               " {'complete': True,\n",
-              "  'volume': 74,\n",
-              "  'time': '2023-11-28T22:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.09954', 'h': '1.09956', 'l': '1.09931', 'c': '1.09938'}},\n",
-              " {'complete': False,\n",
-              "  'volume': 26,\n",
-              "  'time': '2023-11-28T23:00:00.000000000Z',\n",
-              "  'mid': {'o': '1.09942', 'h': '1.09955', 'l': '1.09937', 'c': '1.09953'}}]"
+              "  'volume': 306,\n",
+              "  'time': '2023-12-01T21:30:00.000000000Z',\n",
+              "  'mid': {'o': '1.08788', 'h': '1.08814', 'l': '1.08782', 'c': '1.08799'}},\n",
+              " {'complete': True,\n",
+              "  'volume': 430,\n",
+              "  'time': '2023-12-01T21:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.08800', 'h': '1.08858', 'l': '1.08786', 'c': '1.08833'}}]"
             ]
           },
           "execution_count": 3,
