--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -116,20 +116,20 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 235,\n",
-              "  'time': '2023-12-01T21:15:00.000000000Z',\n",
-              "  'mid': {'o': '1.08804', 'h': '1.08820', 'l': '1.08786', 'c': '1.08788'}},\n",
+              "  'volume': 627,\n",
+              "  'time': '2023-12-04T03:30:00.000000000Z',\n",
+              "  'mid': {'o': '1.08856', 'h': '1.08860', 'l': '1.08836', 'c': '1.08848'}},\n",
               " {'complete': True,\n",
-              "  'volume': 306,\n",
-              "  'time': '2023-12-01T21:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.08788', 'h': '1.08814', 'l': '1.08782', 'c': '1.08799'}},\n",
-              " {'complete': True,\n",
-              "  'volume': 430,\n",
-              "  'time': '2023-12-01T21:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.08800', 'h': '1.08858', 'l': '1.08786', 'c': '1.08833'}}]"
+              "  'volume': 486,\n",
+              "  'time': '2023-12-04T03:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.08849', 'h': '1.08854', 'l': '1.08801', 'c': '1.08801'}},\n",
+              " {'complete': False,\n",
+              "  'volume': 349,\n",
+              "  'time': '2023-12-04T04:00:00.000000000Z',\n",
+              "  'mid': {'o': '1.08800', 'h': '1.08806', 'l': '1.08765', 'c': '1.08771'}}]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
         "id": "YDvk2yOSso4J"
       },
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -259,23 +259,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'BlockingScheduler' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb Cell 8\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# for i in range (len(list_of_str_currency)):\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m#     trading_job(currency_pairs[i],list_of_str_currency\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X10sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# [i])\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X10sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m scheduler \u001b[39m=\u001b[39m BlockingScheduler()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m (\u001b[39mlen\u001b[39m(currency_pairs)):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/bobsprite/git/tradingbot/TradingBotOanda.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     scheduler\u001b[39m.\u001b[39madd_job(trading_job, \u001b[39m'\u001b[39m\u001b[39mcron\u001b[39m\u001b[39m'\u001b[39m, args \u001b[39m=\u001b[39m [currency_pairs[i],list_of_str_currency[i]], day_of_week\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mmon-fri\u001b[39m\u001b[39m'\u001b[39m, hour\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m00-23\u001b[39m\u001b[39m'\u001b[39m, minute\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m1,16,31,46\u001b[39m\u001b[39m'\u001b[39m, start_date\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m2022-01-12 12:00:00\u001b[39m\u001b[39m'\u001b[39m)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'BlockingScheduler' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# for i in range (len(list_of_str_currency)):\n",
         "#     trading_job(currency_pairs[i],list_of_str_currency\n",
