--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -116,20 +116,20 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 2116,\n",
-              "  'time': '2023-12-14T16:15:00.000000000Z',\n",
-              "  'mid': {'o': '1.09979', 'h': '1.10000', 'l': '1.09934', 'c': '1.09968'}},\n",
+              "  'volume': 396,\n",
+              "  'time': '2023-12-15T21:15:00.000000000Z',\n",
+              "  'mid': {'o': '1.08927', 'h': '1.08952', 'l': '1.08924', 'c': '1.08945'}},\n",
               " {'complete': True,\n",
-              "  'volume': 1861,\n",
-              "  'time': '2023-12-14T16:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.09969', 'h': '1.10033', 'l': '1.09932', 'c': '1.09990'}},\n",
-              " {'complete': False,\n",
-              "  'volume': 592,\n",
-              "  'time': '2023-12-14T16:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.09993', 'h': '1.10020', 'l': '1.09976', 'c': '1.09980'}}]"
+              "  'volume': 475,\n",
+              "  'time': '2023-12-15T21:30:00.000000000Z',\n",
+              "  'mid': {'o': '1.08945', 'h': '1.08948', 'l': '1.08938', 'c': '1.08946'}},\n",
+              " {'complete': True,\n",
+              "  'volume': 501,\n",
+              "  'time': '2023-12-15T21:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.08943', 'h': '1.08956', 'l': '1.08936', 'c': '1.08947'}}]"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
