--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "id": "HDUx5opJso4E",
         "outputId": "7690265c-ce95-4865-8cca-03d60c47da16"
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "id": "oh6erbtQso4H"
       },
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "id": "ztFBEJacso4J",
         "outputId": "00070d9d-023c-48c4-da73-8eacf43674d4"
@@ -116,20 +116,20 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 396,\n",
-              "  'time': '2023-12-15T21:15:00.000000000Z',\n",
-              "  'mid': {'o': '1.08927', 'h': '1.08952', 'l': '1.08924', 'c': '1.08945'}},\n",
+              "  'volume': 1050,\n",
+              "  'time': '2023-12-27T19:30:00.000000000Z',\n",
+              "  'mid': {'o': '1.11055', 'h': '1.11141', 'l': '1.11046', 'c': '1.11084'}},\n",
               " {'complete': True,\n",
-              "  'volume': 475,\n",
-              "  'time': '2023-12-15T21:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.08945', 'h': '1.08948', 'l': '1.08938', 'c': '1.08946'}},\n",
-              " {'complete': True,\n",
-              "  'volume': 501,\n",
-              "  'time': '2023-12-15T21:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.08943', 'h': '1.08956', 'l': '1.08936', 'c': '1.08947'}}]"
+              "  'volume': 799,\n",
+              "  'time': '2023-12-27T19:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.11075', 'h': '1.11081', 'l': '1.10996', 'c': '1.11018'}},\n",
+              " {'complete': False,\n",
+              "  'volume': 106,\n",
+              "  'time': '2023-12-27T20:00:00.000000000Z',\n",
+              "  'mid': {'o': '1.11019', 'h': '1.11038', 'l': '1.11016', 'c': '1.11037'}}]"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
